--- a/src/App.css
+++ b/src/App.css
@@ -5,16 +5,20 @@
 /*  align-items: center;*/
 /*}*/
 body{
-    background-color: orangered;
+     background-color: rgb(0, 78, 131);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
 }
 .container{
-    background-color: red;
+    background-color: #ff4159;
     max-width: 400px;
     text-align: center;
     border-radius: 10px;
     margin: 20px;
     padding: 16px 10px;
+    display: inline-block;
+}
+.container:hover{
+    transform: rotate3d(1,0,0,360deg);
+    transition: 1s ease-in;
 }
